--- a/css/style.css
+++ b/css/style.css
@@ -681,7 +681,7 @@ ul.top-info li p.info-text {
 
 .header-one,
 .header-one .site-navigation {
-  background: #23282d;
+  background: #f1f3f5;
 }
 
 .header-one .navbar-collapse {
