Commenting and adding codes

--- a/css/style.css
+++ b/css/style.css
@@ -2541,7 +2541,7 @@ img.testimonial-thumb {
 
 /*-- Copyright --*/
 .copyright {
-  background: #ffb600;
+  background: #2a630f;
   color: #111;
   padding: 25px 0;
   position: relative;
