change bg2 for slider

--- a/css/style.css
+++ b/css/style.css
@@ -3645,3 +3645,9 @@ label {
 .doc-container.doc-name {
   width: 600px;
 }
+
+.tombol:hover {
+  .box-slide-sub-title {
+    color: #cacaca;
+  }
+}
