updating css modal

--- a/css/style.css
+++ b/css/style.css
@@ -3719,7 +3719,7 @@ label {
 }
 
 /* Modal Content */
-.modal-content {
+.modal-contents {
   position: relative;
   /* background-color: #fefefe; */
   background-color: #000;
