--- a/css/style.css
+++ b/css/style.css
@@ -2564,8 +2564,10 @@ img.testimonial-thumb {
   padding: 25px 0;
   position: relative;
   z-index: 1;
+  width: 100%;
   font-weight: 600;
   font-size: 12px;
+  text-align: center;
 }
 
 .footer-menu ul li {
@@ -2610,7 +2612,7 @@ img.testimonial-thumb {
   width: 36px;
   height: 36px;
   line-height: 36px;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(1, 18, 114, 0.9);
   border-radius: 3px;
   color: #ffb600;
   font-weight: 700;
@@ -3582,7 +3584,6 @@ label {
 
 .separator {
   padding:0px 1px;
-  color: rgb(7, 48, 124);
   width:auto;
   border: 1px solid #d7d8da;
 }
@@ -3705,9 +3706,6 @@ label {
   display: table;
   clear: both;
 }
-
-/* Create four equal columns that floats next to eachother */
-
 
 /* The Modal (background) */
 .lightbox-modal {
